Added unit tests for fruit-shop